feat: 用户模块开发完成

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,6 +29,18 @@
       ],
       "@app/redis/*": [
         "libs/redis/src/*"
+      ],
+      "@app/email": [
+        "libs/email/src"
+      ],
+      "@app/email/*": [
+        "libs/email/src/*"
+      ],
+      "@app/common": [
+        "libs/common/src"
+      ],
+      "@app/common/*": [
+        "libs/common/src/*"
       ]
     }
   }
